# recommendation-engine

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: CONCEPTS.md  PROJECT_PLAN.md
scripts/: compare_models.py  demo_llm_rerank.py  e2e_test.sh  serve.py  smoke_test.sh
src/: __init__.py  benchmark.py  config.py  evaluation.py  persistence.py
src/api/: __init__.py  app.py  deps.py  main.py  schemas.py
src/data/: __init__.py  ids.py  loader.py  preprocessor.py
src/models/: __init__.py  _ranking.py  collaborative.py  content_based.py  hf_llm_client.py  hybrid.py  llm_rerank.py  neural_cf.py
src/utils/: __init__.py  seed.py
streamlit_app/: app.py
streamlit_app/pages/: 1_📊_Overview.py  2_👤_User_Profile.py  3_🔍_Similar_Movies.py  4_🤖_Model_Comparison.py  5_⭐_Rate_Movies.py
tests/: conftest.py  test_benchmark.py  test_collaborative.py  test_content_based.py  test_e2e.py  test_evaluation.py  test_hybrid.py  test_loader.py  test_neural_cf.py  test_persistence.py  test_preprocessor.py  test_seed.py
tests/api/: test_routes.py
tests/data/: conftest.py  test_ids.py  test_loader.py  test_preprocessor.py
tests/models/: test_als.py  test_collaborative.py  test_content_based.py  test_hf_llm_client.py  test_hybrid.py  test_llm_rerank.py  test_neural_cf.py
