[project]
name = "recommendation-engine"
version = "0.0.1"
description = "Hybrid recommendation engine — collaborative + content + neural CF, with optional LLM re-ranker."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Mohamed ElKholy", email = "moelkholy1995@gmail.com" }]

# Runtime dependencies are added per-phase as those plans land.
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "pyarrow>=17",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pandas-stubs>=2.2",
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5",
  "pre-commit>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# -----------------------------------------------------------------------------
# Ruff — linter + formatter (replaces black, isort, flake8).
# Source of truth for line length, import order, and style lint rules.
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]
extend-exclude = ["notebooks", "data", "models"]

[tool.ruff.lint]
# Opinionated minimal set from CODE_STYLE §1:
#   E = pycodestyle errors
#   F = pyflakes (unused imports, undefined names, ...)
#   I = isort (import ordering)
#   N = pep8-naming (snake_case, PascalCase)
#   W = pycodestyle warnings
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line length is owned by the formatter, not the linter.

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# -----------------------------------------------------------------------------
# mypy — strict type checking. Enforces §4 of CODE_STYLE.
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
disallow_any_generics = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true  # 3rd-party ML libs (pandas, torch) ship partial stubs
files = ["src", "tests"]

# -----------------------------------------------------------------------------
# pytest + coverage.
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
]
markers = [
  "integration: integration tests (slower, may require services)",
  "slow: slow tests excluded from the default CI lane",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*", "scripts/*", "notebooks/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
